# hatch-meson

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  flow.yml  tests.yml
docs/examples/spam/: meson.build  pyproject.toml
src/hatch_meson/: _tags.py  config.py  hooks.py  plugin.py
tests/: conftest.py  test_examples.py  test_options.py  test_pep517.py  test_project.py  test_sdist.py  test_tags.py  test_wheel.py
